<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:padding="16dp">

    <TextView
            android:id="@+id/tv_dialog_record_flight_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_dialog_record_flight_title"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="16dp"/>

    <TextView
            android:id="@+id/tv_dialog_record_flight_flight_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_dialog_record_flight_flight_name"/>

    <EditText
            android:id="@+id/et_dialog_record_flight_flight_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_dialog_record_flight_flight_name"
            android:inputType="text"/>

    <TextView
            android:id="@+id/tv_dialog_record_flight_update_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_dialog_record_flight_update_settings"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/tv_dialog_record_flight_slow_mode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_dialog_record_flight_slow_mode"/>

        <EditText
                android:id="@+id/et_dialog_record_flight_slow_mode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/et_dialog_record_flight_slow_mode"
                android:inputType="number"/>

        <TextView
                android:id="@+id/tv_dialog_record_flight_fast_mode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_dialog_record_flight_fast_mode"/>

        <EditText
                android:id="@+id/et_dialog_record_flight_fast_mode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/et_dialog_record_flight_fast_mode"
                android:inputType="number"/>
    </LinearLayout>

    <CheckBox
            android:id="@+id/cb_free_tracking"
            android:text="@string/cb_free_tracking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    />

    <LinearLayout
            android:id="@+id/layout_airport_config"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
                android:id="@+id/tv_label_origin_airport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_origin_airport"/>

        <AutoCompleteTextView
                android:id="@+id/ac_origin_airport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ac_airport"
                android:inputType="text" />

        <TextView
                android:id="@+id/tv_label_destination_airport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_destination_airport"/>

        <AutoCompleteTextView
                android:id="@+id/ac_destination_airport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ac_airport"
                android:inputType="text" />
    </LinearLayout>



</LinearLayout>
