<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:padding="16dp">

    <TextView
            android:id="@+id/dialog_updates_config_label_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_updates_config_label_title"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="16dp"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dialog_updates_config_label_update_time"/>

        <EditText
                android:id="@+id/dialog_updates_config_number_seconds"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="@string/dialog_tracking_config_number_update_time"
                android:inputType="number"
                android:hint="@string/dialog_tracking_config_number_update_time"/>

    </LinearLayout>

    <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/dialog_updates_config_sw_sensor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/dialog_updates_config_sw_sensor_description"
            android:textOn="@string/dialog_updates_config_sw_sensor_textOn"
            android:textOff="@string/dialog_updates_config_sw_sensor_textOff"
            android:enabled="true"
            android:checked="true"/>
</LinearLayout>
