<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:padding="16dp">

    <TextView
            android:id="@+id/dialog_tracking_config_label_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_tracking_config_label_title"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="16dp"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/dialog_tracking_config_label_update_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dialog_tracking_config_label_update_time"/>

        <EditText
                android:id="@+id/et_dialog_record_flight_slow_mode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="@string/dialog_tracking_config_number_update_time"
                android:inputType="number"
                android:hint="@string/dialog_tracking_config_number_update_time"/>

        <RadioGroup
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="horizontal">

            <RadioButton
                    android:text="@string/dialog_tracking_config_rb_minutes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/dialog_tracking_config_rb_minutes"
                    android:layout_weight="1"
            />
            <RadioButton
                    android:text="@string/dialog_tracking_config_rb_seconds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/dialog_tracking_config_rb_seconds"
                    android:layout_weight="1"
            />
        </RadioGroup>
    </LinearLayout>

</LinearLayout>
