<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:padding="20dp"
              android:gravity="center">

    <TextView
            android:id="@+id/dialog_tracking_action_label_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_tracking_action_label_title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingBottom="16dp"/>

    <Button
            android:id="@+id/dialog_tracking_action_btn_finish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_tracking_action_btn_finish"
            android:background="@color/green"
            android:textColor="@android:color/white"
            android:padding="5dp"
            android:layout_marginBottom="10dp"/>

    <Button
            android:id="@+id/dialog_tracking_action_btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_tracking_action_btn_cancel"
            android:background="@color/red"
            android:textColor="@android:color/white"
            android:padding="5dp"
            android:layout_marginBottom="10dp"/>

    <Button
            android:id="@+id/dialog_tracking_action_btn_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_tracking_action_btn_exit"
            android:background="@color/round_button_gray"
            android:textColor="@android:color/white"
            android:padding="5dp"/>

</LinearLayout>
