<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:background="#000000"
              android:padding="5dp">

    <!-- Contenedor principal con dos columnas -->
    <LinearLayout
            android:id="@+id/text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <!-- Columna izquierda -->
        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

            <!-- Latitude -->
            <LinearLayout
                    style="@style/LocationInfoPanelFieldLayout">
                <TextView
                        android:id="@+id/tv_label_lat"
                        android:layout_width="@dimen/location_info_panel_icons_width"
                        android:layout_height="@dimen/location_info_panel_icons_height"
                        android:text="@string/tv_label_lat"
                        android:textColor="#FFFFFF"
                        android:layout_marginEnd="10dp"
                        android:gravity="center"
                />
                <TextView
                        android:id="@+id/tv_lat"
                        android:text="@string/tv_default_value"
                        style="@style/LocationInfoPanelText"
                />
            </LinearLayout>

            <!-- Bearing -->
            <LinearLayout
                    style="@style/LocationInfoPanelFieldLayout">
                <ImageView
                        android:id="@+id/iv_icon_bearing"
                        android:contentDescription="@string/iv_icon_bearing"
                        android:src="@drawable/info_panel_ic_compass"
                        style="@style/LocationInfoPanelIcon"
                />
                <TextView
                        android:id="@+id/tv_bearing"
                        android:text="@string/tv_default_value"
                        style="@style/LocationInfoPanelText"
                />
            </LinearLayout>

            <!-- Speed -->
            <LinearLayout
                    style="@style/LocationInfoPanelFieldLayout">
                <ImageView
                        android:id="@+id/iv_icon_speed"
                        android:contentDescription="@string/iv_icon_speed"
                        android:src="@drawable/info_panel_ic_speed"
                        style="@style/LocationInfoPanelIcon"
                />
                <TextView
                        android:id="@+id/tv_speed"
                        android:text="@string/tv_default_value"
                        style="@style/LocationInfoPanelText"
                />
            </LinearLayout>

            <!-- Last time -->
            <LinearLayout
                    style="@style/LocationInfoPanelFieldLayout">
                <ImageView
                        android:id="@+id/iv_icon_last_time"
                        android:contentDescription="@string/iv_icon_last_time"
                        android:src="@drawable/info_panel_ic_last_time"
                        style="@style/LocationInfoPanelIcon"
                />
                <TextView
                        android:id="@+id/tv_last_time"
                        android:text="@string/tv_default_value"
                        style="@style/LocationInfoPanelText"
                />
            </LinearLayout>
        </LinearLayout>

        <!-- Separador vertical -->
        <View
                android:id="@+id/gps_info_panel_glh_50"
                android:layout_width="@dimen/location_info_panel_icons_width"
                android:layout_height="@id/text_layout"
                android:background="@color/black"
                android:textColor="#FFFFFF"
        />

        <!-- Columna derecha -->
        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

            <!-- Longitude -->
            <LinearLayout
                    style="@style/LocationInfoPanelFieldLayout">
                <TextView
                        android:id="@+id/tv_label_lon"
                        android:layout_width="@dimen/location_info_panel_icons_width"
                        android:layout_height="@dimen/location_info_panel_icons_height"
                        android:text="@string/tv_label_lon"
                        android:textColor="#FFFFFF"
                        android:layout_marginEnd="10dp"
                        android:gravity="center"
                />
                <TextView
                        android:id="@+id/tv_lon"
                        android:text="@string/tv_default_value"
                        style="@style/LocationInfoPanelText"
                />
            </LinearLayout>

            <!-- Altitude -->
            <LinearLayout
                    style="@style/LocationInfoPanelFieldLayout">
                <ImageView
                        android:id="@+id/iv_icon_altitude"
                        android:contentDescription="@string/iv_icon_altitude"
                        android:src="@drawable/info_panel_ic_altitude"
                        style="@style/LocationInfoPanelIcon"
                />
                <TextView
                        android:id="@+id/tv_altitude"
                        android:text="@string/tv_default_value"
                        style="@style/LocationInfoPanelText"
                />
            </LinearLayout>

            <!-- Satellites -->
            <LinearLayout
                    style="@style/LocationInfoPanelFieldLayout">
                <ImageView
                        android:id="@+id/iv_icon_satellites"
                        android:contentDescription="@string/iv_icon_satellites"
                        android:src="@drawable/info_panel_ic_satellite"
                        style="@style/LocationInfoPanelIcon"
                />
                <TextView
                        android:id="@+id/tv_satellites"
                        android:text="@string/tv_default_value"
                        style="@style/LocationInfoPanelText"
                />
            </LinearLayout>

            <!-- Accuracy -->
            <LinearLayout
                    style="@style/LocationInfoPanelFieldLayout">
                <ImageView
                        android:id="@+id/iv_icon_accuracy"
                        android:contentDescription="@string/iv_icon_accuracy"
                        android:src="@drawable/info_panel_ic_accuracy"
                        style="@style/LocationInfoPanelIcon"
                />
                <TextView
                        android:id="@+id/tv_accuracy"
                        android:text="@string/tv_default_value"
                        style="@style/LocationInfoPanelText"
                />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <include
            android:id="@+id/ll_gps_info_panel"
            layout="@layout/flight_info_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/toolbar"
            android:layout_alignParentBottom="true"
            android:visibility="gone"
    />
</LinearLayout>
