<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <!-- Pantalla 1 -->
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/start_tracking_screen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0">

        <!-- Contenido de la pantalla 1 aquí -->
        <Button
                android:id="@+id/btn_start_tracking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_start_tracking"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Pantalla 2 -->
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/recording_tracking_screen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="1.0">

        <!-- Switch para seleccionar modo lento/rápido -->
        <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sw_speed_mode"
                android:layout_width="164dp"
                android:layout_height="27dp"
                android:text="@string/sw_speed_mode_onTextOn"
                android:checked="true"
                android:textOn="@string/sw_speed_mode_onTextOn"
                android:textOff="@string/sw_speed_mode_onTextOff"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="10dp"/>


        <TextView
                android:id="@+id/tv_tracking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_tracking"
                app:layout_constraintTop_toBottomOf="@+id/sw_speed_mode"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="@+id/sw_speed_mode"/>

        <TextView
                android:id="@+id/tv_flight_name"
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:text="@string/tv_flight_name"
                app:layout_constraintStart_toEndOf="@+id/tv_tracking"
                app:layout_constraintTop_toTopOf="@+id/tv_tracking" />

        <!-- Botón para finalizar y guardar -->
        <Button
                android:id="@+id/btn_finish_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_finish_save"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.04"
                android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/tv_tracking"/>

        <!-- Botón para cancelar -->
        <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_finish_save"
                app:layout_constraintHorizontal_bias="0.8"
                app:layout_constraintTop_toTopOf="@+id/btn_finish_save"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>